unpackaged/main/default/objects/Records_ID__c/Records_ID__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Sales and CPQ ID needed in configuration</description>
    <label>Records ID</label>
</CustomObject>