unpackaged/main/default/objects/Records_ID__c/fields/CPQ_Order_Cerbavet_Analysis__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Order_Cerbavet_Analysis__c</fullName>
    <description>2PACE</description>
    <label>CPQ Order Cerbavet Analysis</label>
    <length>18</length>
    <type>Text</type>
</CustomField>