unpackaged/main/default/objects/Records_ID__c/fields/CPQ_Order_Cerbavet_College__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Order_Cerbavet_College__c</fullName>
    <label>CPQ Order Cerbavet College</label>
    <length>18</length>
    <type>Text</type>
</CustomField>