unpackaged/main/default/objects/Records_ID__c/fields/CPQ_Quote_Cerbavet_College__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Quote_Cerbavet_College__c</fullName>
    <label>CPQ Quote Cerbavet College</label>
    <length>18</length>
    <type>Text</type>
</CustomField>